# trail

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  TRANSCRIPT_SCHEMA.md  install.sh  pyproject.toml  todo.md
.github/workflows/: ci.yml
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_db.py  test_doctor.py  test_install.py  test_integration.py  test_parser.py  test_redact.py  test_turns.py  test_watch.py
trail/: __init__.py  __main__.py  adapters.py  claude_heuristics.py  cli.py  config.py  db.py  doctor.py  formatting.py  line_buffer.py  markdown.py  metadata.py  parser.py  paths.py  pty_runner.py  redact.py  turns.py  types.py  watch.py
