[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trail-cli"
version = "0.1.0"
description = "PTY wrapper and local memory layer for AI CLI sessions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Kayce" }
]
dependencies = []

[project.scripts]
trail = "trail.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["trail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
